NEW VERSION OF SITE buildable - node API instead of File System Route API all articles in .mdx, and system is blog ready

--- a/src/pages/indexes/index-turystyka.mdx
+++ b/src/pages/indexes/index-turystyka.mdx
@@ -2,7 +2,7 @@
 title: "Turystyka"
 comment: "index-section"
 section: "turystyka"
-subsection: "turystyka"
+subsection: ""
 ---
 
 #### Zapraszam do podróży i zwiedzania świata.
