--- a/archive/content/TODO/berlin.mdx
+++ b/archive/content/TODO/berlin.mdx
@@ -2088,5 +2088,6 @@ Wciąż trwała ewakuacja 12 Armii Wencka, dziś obszar na którym się bronili 
 ### Odnośniki
 
 - Eastory ["Eastern Front of WWII animated: 1944/1945" [YT 17:05]](https://www.youtube.com/watch?v=-AUdP-QVEKA)
+- [Stadtplan von Berlin 1:25.000 [1944]](https://www.landkartenarchiv.de/historischestadtplaene2.php?q=landkartenarchiv_berlin_25T_1944)
 
 
