--- a/archive/content/TODO/js.mdx
+++ b/archive/content/TODO/js.mdx
@@ -8,3 +8,22 @@ subsection: "js"
 # IT JavaScript
 
 treść IT JavaScript
+
+Typy proste są niemutowalne, z każdą zmianą są tworzone od nowa.
+Nie mają metod i właściwości, mogą zostać "owinięte" (wrapping) w obiekt, ale są to wartości tylko do odczytu.
+
+Do obiektu po kropce lub z nawiasem kwadratowym: string.length aka string['length']
+
+Łączenie stringów: plus, gravis, concat.
+
+Obiekt String
+const string = new String("tekst")
+Wartość obiektu string.valueOf()
+
+https://www.udemy.com/course/typescript-with-react-jest-testing/
+Typescript with React quick start - with Jest testing
+Alex Horea
+4.5hrs 4.4
+Jul. 06, 2021
+
+https://kursjs.pl/
