--- a/src/pages/articles/brandenburgia-ksiazki-i-odnosniki.mdx
+++ b/src/pages/articles/brandenburgia-ksiazki-i-odnosniki.mdx
@@ -72,6 +72,11 @@ subsection: "brandenburgia"
 - [Pieces of Berlin - Discovering Berlin&#039;s everyday life](http://www.piecesofberlin.com)
 - [#FreiheitBerlin | Be Berlin](https://be.berlin)
 
+#### Berlin YT
+
+- Radical Living ["Biggest Tourist Traps in BERLIN & Better Alternatives" [YT 8:02]](https://www.youtube.com/watch?v=x-ircquPo7k)
+- Nomad Nik ["BERLIN TRAVEL GUIDE: SECRET TIPS from a local" [YT 18:23]](https://www.youtube.com/watch?v=n165SU3jKck)
+
 ##### Kunst
 
 - [Creative City Berlin](https://www.creative-city-berlin.de/)
