--- a/src/pages/articles/js-odnosniki-zagadnienia.mdx
+++ b/src/pages/articles/js-odnosniki-zagadnienia.mdx
@@ -32,6 +32,7 @@ Zagadnienia
 21. [gravity well "Using JavaScript Sets"](https://medium.com/javascript-in-plain-english/using-javascript-sets-37752330682d) | [Flavio Copes "The JavaScript if/else conditional"](https://flaviocopes.com/javascript-if/) | [Hakeem Abdul Intro Into Functions In Javascript](https://dev.to/keemosty/intro-into-functions-in-javascript-540c) | [Vivek Sharma "Variable Hoisting in Javascript"](https://blog.vivek-sharma.com/variable-hoisting-in-javascript) | [Laura Jane "(JavaScript Functions) => {Let's Learn};"](https://dev.to/misslorsx/javascript-functions-let-s-learn-jhi)
 22. **Basics** [Rahul Sagore "Understanding Event Loop, Call Stack, Event & Job Queue in Javascript"](https://medium.com/@Rahulx1/understanding-event-loop-call-stack-event-job-queue-in-javascript-63dcd2c71ecd) | [Felix Gerschau "JavaScript Event Loop And Call Stack Explained"](https://felixgerschau.com/javascript-event-loop-call-stack/) | [Alex Devero "JavaScript Basics — Understanding Basic JavaScript Data Types Pt.1"](https://medium.com/javascript-in-plain-english/javascript-basics-understanding-basic-javascript-data-types-pt-1-53c6a5971b53) \- [Alex Devero "JavaScript Basics — Understanding Basic JavaScript Data Types Pt.2"](https://medium.com/javascript-in-plain-english/javascript-basics-understanding-basic-javascript-data-types-pt-2-411ecb1d758) | [Brandon Morelli "JavaScript — Map vs. ForEach"](https://codeburst.io/javascript-map-vs-foreach-f38111822c0f)
 23. **API** [Caleb Curry "REST API Crash Course - Introduction + Full Python API Tutorial" [YT 52:49]](https://www.youtube.com/watch?v=qbLc5a9jdXo)
+24. Eventloop [Loupe](http://latentflip.com/loupe/?code/) | [The Node.js Event Loop, Timers, and process.nextTick()](https://nodejs.org/en/docs/guides/event-loop-timers-and-nexttick/)
 
 #### 2020
 
