--- a/src/pages/articles/js-odnosniki.mdx
+++ b/src/pages/articles/js-odnosniki.mdx
@@ -61,6 +61,8 @@ JavaScript
 - [2ality – JavaScript and more](https://2ality.com) Dr. Axel Rauschmayer
 - [Jscurious.com / JavaScript](https://jscurious.com/category/javascript/)
 - [The Javascript Ninja](https://thejavascriptninja.com)
+- fsgeek [#javascript](https://fsgeek.pl/tags/javascript/)
+- Stack Abuse [javacsript](https://stackabuse.com/tag/javascript)
 
 ### Kursy
 
