--- a/src/pages/articles/react-links.mdx
+++ b/src/pages/articles/react-links.mdx
@@ -41,6 +41,7 @@ subsection: "js"
 - positronX.io [/Reac](https://www.positronx.io/react-js/)
 - [Max Rozen All articles](https://maxrozen.com/articles/)
 - Code-Boost [25 posts tagged with "React"](https://www.code-boost.com/tag/react/)
+- [reactywny.pl blog o webdevelopmencie](https://reactywny.pl/)
 
 #### Tutoriale i kursy
 
