--- a/src/pages/festung-breslau/articles/panstwo-hitlerowskie.mdx
+++ b/src/pages/festung-breslau/articles/panstwo-hitlerowskie.mdx
@@ -128,6 +128,21 @@ Liczba publicznych wystąpień Hitlera latami:
 - 1944 3 (1 lipca mowa na pogrzebie generała Eduarda Dietla, oraz 4 lipca spotkanie z 200 przedstawicielami przemysłu w hotelu "Platterhof" w Obersalzbergu)
 - 1945 2 (mowa noworoczna i 30 stycznia)
 
+### Hitlerjugend
+
+>Wszystko co słabe, musi odpaść pod uderzeniami młota. W zamkach mego zakonu będzie wyrastać młodzież, która napełni świat przerażeniem. Chcę młodzieży gwałtownej, władczej, nieustraszonej i okrutnej. Te wszystkie cechy musi posiadać młodzież. Musi umieć znosić ból. Nie może mieć w sobie nic słabego ani czułego. Wolny, wspaniały drapieżnik musi  znowu błyskać z jej oczu. Silną i piękną chcę mieć moją młodzież [...] Tylko z nią będę w stanie stworzyć to co nowe.
+
+>Zacznę od młodych. My, starsi jesteśmy zużyci, przegnili do szpiku kości. Jesteśmy tchórzliwi i sentymentalni, obciążeni brzemieniem upokarzającej przeszłości i mamy we krwi tępe wspomnienia z czasów zniewolenia i służalczości. Ale nie moi wspaniali młodzi! Czyż jest ktoś świetniejszy na świecie? Popatrzcie na tych młodych mężczyzn i chłopców! Co za tworzywo! Z nimi mogę stworzyć nowy świat. Bohaterski czas młodości; z niej wyłoni się człowiek twórczy, boski... Gdy wróg powiada: “Nie przejdę na waszą stronę”, mówię mu spokojnie: “Twoje dziecko już należy do nas... Kimże sam jesteś? Przeminiesz. Jednakże twoi potomkowie już znaleźli się w nowym obozie. Już wkrótce będą znali tylko odnowiony naród”.
+
+Za: Szymon Wrzesiński, Krzysztof Urban “Hitler-Jugend na Dolnym Śląsku 1933-1945” Agencja wydawnicza CB 2015.
+
+### Socjalizm
+
+>Mogliśmy się nazwać Partią Liberalną. Wybraliśmy jednak termin Narodowi Socjaliści. Nasz socjalizm jest narodowy. Żądamy spełnienia sprawiedliwych roszczeń klasy pracującej przez państwo, w oparciu o solidarność rasową. Dla nas państwo i rasa to jedno.<br />
+>Komunizm nie jest socjalizmem. Marksizm nie jest socjalizmem. Marksiści ukradli ten termin i przekręcili jego znaczenie. Odbiorę socjalizm socjalistom. Socjalizm jest starożytną aryjską instytucją germańską.
+
+dziennikarzowi George'owi Viereckowi w 1923
+
 ### Odnośniki
 
 - Mark Felton Productions ["Nazi Day of the Dead - Berlin 1943" [YT 10:21]](https://www.youtube.com/watch?v=u1gISC92E2E) | ["Nazi Symbols - The Story Behind the Imagery" [YT 11:06]](https://www.youtube.com/watch?v=tuB2L6SN6Lg)
